# Edit-Banana

./: .gitignore  NEXTJS-README.md  PROJECT-NEXTJS.md  README-NEXTJS-COMPLETE.md  README.md  README_CN.md  README_zh.md  REPLACE_REPO.md  TODO.md  main.py  package-lock.json  pyproject.toml  replace_repo.sh  requirements.txt  server.py  server_pa.py
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: .env.example  fly.toml  main_api.py  railway.toml  requirements.txt
apps/web/: package-lock.json  package.json
apps/web/src/app/: page.tsx
apps/web/src/app/sections/: example-showcase.tsx  navbar.tsx  upload-section.tsx
apps/web/src/components/ui/: card.tsx
apps/web/src/hooks/: use-conversion-history.ts  use-referral.ts
apps/web/src/lib/: api.ts  types.ts
config/: config.yaml  config.yaml.example
frontend/src/: App.jsx
modules/: README.md  __init__.py  arrow_processor.py  base.py  basic_shape_processor.py  icon_picture_processor.py  sam3_info_extractor.py
modules/text/: coord_processor.py  restorer.py  xml_generator.py
modules/text/ocr/: pix2text.py
modules/text/processors/: font_family.py  font_size.py  formula.py  style.py
scripts/: multimodal_prompt.py  run_all.py  sam3_extractor.py
